-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.13.0, Qt Creator 4.13.1, Qt Creator 4.13.2
-
None
-
-
76ae5780c4ada9a44e35103fcc1247ff2b7fc53d (qt-creator/qt-creator/master)
Refactor of function parameters does not work for functions declared with preceeding macro.
fx.
h-file contains this:
DLL_PUBLIC void my_function(int a);
cpp-file contains this:
void my_function(int a) {
}
Rename of the variable 'a' and selecting "apply fuinction signature changes" fails.
Interestingly navigation back and forth h<->cpp works - so the system does correlate declaration and definition.
For Gerrit Dashboard: QTCREATORBUG-24739 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
319323,2 | CppTools: Fix function decl/def look-up | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |